There were two variables in the variable boxes that the variable names were overlapping. Fixed this by making the font size smaller for these two variables.

--- a/src/mdfserver/static/mdfserver/css/custom_style.css
+++ b/src/mdfserver/static/mdfserver/css/custom_style.css
@@ -619,6 +619,7 @@ footer {
     left: 616px;
     padding-bottom: 9px;
     margin-left: 0px;
+    text-align: center;
     display: inline-block;
 }
 
